# J3LI-V1

./: .coverage  .coverage.claude.pid6016.XOjomFSx.HNcSM5VHXlVh  .env.example  .gitignore  Architecture.md  Claude.md  Dockerfile  J3LI.bat  J3LI_Design_System.html  J3LI_START.bat  README.md  debug_launch.py  debug_log.txt  docker-compose.yml  docker-compose.yml.txt  j3LI - Brand Strategy.txt  j3li_app.py  pyproject.toml  requirements.txt  schema_registry.json  start_api.bat  test_api.py
docs/: ARCHITECTURE_PIVOT.md  BUILD_PLAN.md  UX_DESIGN.md
j3li/: __init__.py  config.py
j3li/api/: main.py
j3li/graph/: client.py
j3li/ingestion/: loader.py  seed.py
